--- a/config-client-prod.properties
+++ b/config-client-prod.properties
@@ -1,1 +1,2 @@
-
+sample.properties1= sample properties1 for client with prod profile
+sample.properties2= sample properties2 for client with prod profile
